multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - image: nginx
    name: alpha
    resources: {}
  - image: busybox
    name: beta
    command: ["/bin/sh", "-c", "sleep", "4800"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
