request-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: lion
  name: lion
  namespace: default
spec:
  containers:
  - image: redis:alpine
    name: lion
    resources:
      limits:
        cpu: 400m
        memory: 700Mi
      requests:
        cpu: 200m
        memory: 500Mi
